スタイル調整

--- a/assets/sass/foundation/_common.scss
+++ b/assets/sass/foundation/_common.scss
@@ -160,6 +160,11 @@ pre, code, kbd, samp, tt {
 .common {
   &__indent {
     display: inline-block;
+    &-sp {
+      @include pc {
+        display: inline;
+      }
+    }
   }
 }
 .main {
